<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>valid_path_checker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hjk3889@chosun.kr">sws</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>perception_msgs</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
